--- a/styles/main.css
+++ b/styles/main.css
@@ -86,3 +86,32 @@ footer a {
 footer:hover {
     opacity: 1;
 }
+
+.output {
+    display: none; /* For PHP Post method */
+    padding: 0.5rem 1rem;
+    border: 2px solid #000;
+    background: rgba(176, 235, 112, 0.366);
+}
+
+.output p {
+    margin: 0;
+    line-height: 1.5;
+    font-family: "Fira Code", monospace;
+    font-size: 0.8rem;
+}
+
+input[type="submit"] {
+    width: 100%;
+    appearance: none;
+    border: 2px solid #000;
+    background: #f55;
+    padding: 0.5rem 1rem;
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+}
+
+input[type="submit"]:hover {
+    background: #000;
+    color: #fff;
+}
