--- a/styles/main.css
+++ b/styles/main.css
@@ -40,6 +40,14 @@ body {
     align-items: center;
 }
 
+.container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 h1 {
     font-family: "Fira Code", sans-serif;
 }
@@ -62,10 +70,9 @@ footer {
     font-family: "Fira Code", monospace;
     color: #555;
     font-size: 0.7rem;
-    position: absolute;
-    bottom: 1rem;
-    left: 2rem;
-    opacity: 0.7;
+    opacity: 0.5;
+    width: 100%;
+    padding: 0.5rem 2rem;
 }
 
 footer span {
